# bookly_BE

./: pyproject.toml
app/: main.py
app/src/: celery_tasks.py  config.py  errors.py  mail.py  main.py  middleware.py  utils.py
app/src/auth/: dependencies.py  routes.py  schema.py  service.py
app/src/books/: routes.py  schemas.py  service.py
app/src/db/: database.py  models.py  redis.py
app/src/reviews/: routes.py  schema.py  service.py
migrations/: env.py
migrations/versions/: 171ae7b58508_add_review_table.py  3c691475a045_add_roles_to_users.py  3d61c24a5ecd_relate_users_to_books.py  4f0e4eeb0cd6_add_password_hash.py  94be5fb1738b_init.py
